--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --experimental-modules ./index.js"
+    "dev": "nodemon --experimental-modules ./index.js",
+    "start": "node ./index.js"
   },
   "keywords": [],
   "author": "",
