--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "back-end",
+  "name": "perrymorris-email",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,14 +9,17 @@
     "start": "node ./index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Bridgerland Web & Mobile Development Department",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "handlebars": "^4.7.7",
+    "express-validator": "^6.14.2",
     "nodemailer": "^6.7.7",
-    "nodemailer-express-handlebars": "^5.0.0"
+    "nodemailer-pug-engine": "^2.0.1",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
